--- a/our-team.html
+++ b/our-team.html
@@ -125,7 +125,7 @@
                 <div class="content-container">
                     <img src="images/team/elias.jpg">
                     <h2>Elias Masilela</h2>
-                    <h3>Executive Chairman</h3>
+                    <h3>Executive chairperson</h3>
                     <h4>
                         BA Social Sciences<br>
                         M Social Sciences in Economic Policy and Analysis
@@ -134,7 +134,7 @@
                 <div class="content-container">
                     <img src="images/team/johan.jpg">
                     <h2>Johan du Toit</h2>
-                    <h3>Joint Chief Executive Officer (Operations)</h3>
+                    <h3>Joint chief executive officer (operations)</h3>
                     <h4>
                         B.Comm (Agric economics)<br>
                         Hons B&A, MBA
@@ -143,7 +143,7 @@
                 <div class="content-container">
                     <img src="images/team/faans.jpg">
                     <h2>Faans Roos</h2>
-                    <h3>Joint Chief Executive Officer (Finance)</h3>
+                    <h3>Joint chief executive officer (finance)</h3>
                     <h4>
                         B.Acc (Hons)<br>
                         CA (SA)
@@ -152,15 +152,15 @@
                 <div class="content-container">
                     <img src="images/team/christiaan.jpg">
                     <h2>Christiaan Buys</h2>
-                    <h3>Director: Risk Management</h3>
+                    <h3>Director: Risk management</h3>
                     <h4>BSc (Maths)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/piet.jpg">
                     <h2>Piet Krynauw</h2>
                     <h3>
-                        Non-executive Director<br>
-                        (Chairman of the Credit Committee)
+                        Non-executive director<br>
+                        (chairperson of the credit committee)
                     </h3>
                     <h4>
                         B.Comm<br>
@@ -176,37 +176,37 @@
                 <div class="content-container">
                     <img src="images/team/pikkie.jpg">
                     <h2>Pikkie Swart</h2>
-                    <h3>Head of Operations</h3>
+                    <h3>Head of operations</h3>
                     <h4>B.Econ (Hons)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/morne.jpg">
                     <h2>Morne Rossouw</h2>
-                    <h3>Portfolio Manager</h3>
+                    <h3>Portfolio manager</h3>
                     <h4>Diploma (Banking)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/jp.jpg">
                     <h2>JP Brand</h2>
-                    <h3>Business Manager</h3>
+                    <h3>Business manager</h3>
                     <h4>B.Comm (Banking)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/willie.jpg">
                     <h2>Willie De Lange</h2>
-                    <h3>Corporate Business Manager</h3>
+                    <h3>Corporate business manager</h3>
                     <h4>B.Comm (Commercial accounting)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/derek.jpg">
                     <h2>Derek Maas</h2>
-                    <h3>Business Analyst</h3>
+                    <h3>Business analyst</h3>
                     <h4>B.Comm</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/ilse.jpg">
                     <h2>Ilse Martin</h2>
-                    <h3>Business Analyst</h3>
+                    <h3>Business analyst</h3>
                     <h4>B.Comm</h4>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                 <div class="content-container">
                     <img src="images/team/albert.jpg">
                     <h2>Albert Smith</h2>
-                    <h3>Credit Head - Alternate director to F Roos and J du Toit</h3>
+                    <h3>Credit head: Alternate director to F Roos and J du Toit</h3>
                     <h4>
                         B.Comm (Management Accounting) (Hons)<br>
                         ACMA
@@ -224,13 +224,13 @@
                 <div class="content-container">
                     <img src="images/team/pierre.jpg">
                     <h2>Pierre Fourie</h2>
-                    <h3>Credit Manager</h3>
+                    <h3>Credit manager</h3>
                     <h4>B.Comm (Management)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/melinda.jpg">
                     <h2>Melinda Leib</h2>
-                    <h3>Credit Manager</h3>
+                    <h3>Credit manager</h3>
                     <h4>B.Comm</h4>
                 </div>
             </div>
@@ -239,25 +239,25 @@
                 <div class="content-container">
                     <img src="images/team/marelise.jpg">
                     <h2>Marelise Conradie</h2>
-                    <h3>Legal Manager</h3>
+                    <h3>Legal manager</h3>
                     <h4>B.Comm (Legal)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/nadine.jpg">
                     <h2>Nadine Solomons</h2>
-                    <h3>Risk Portfolio Manager</h3>
+                    <h3>Risk portfolio manager</h3>
                     <h4>National Diploma: Management</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/marinda.jpg">
                     <h2>Marinda Huysamen</h2>
-                    <h3>Compliance Manager</h3>
+                    <h3>Compliance manager</h3>
                     <h4></h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/jo-ann.jpg">
                     <h2>Jo-Ann Louw</h2>
-                    <h3>Compliance Official</h3>
+                    <h3>Compliance official</h3>
                     <h4></h4>
                 </div>
             </div>
@@ -266,19 +266,19 @@
                 <div class="content-container">
                     <img src="images/team/celeste.jpg">
                     <h2>Celeste Andries</h2>
-                    <h3>Financial Manager</h3>
+                    <h3>Financial manager</h3>
                     <h4>CA (SA)</h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/maree.jpg">
                     <h2>Maree Nortje</h2>
-                    <h3>Treasury Admin Manager</h3>
+                    <h3>Treasury admin manager</h3>
                     <h4></h4>
                 </div>
                 <div class="content-container">
                     <img src="images/team/chani.jpg">
                     <h2>Chani Liebenberg</h2>
-                    <h3>IT Manager</h3>
+                    <h3>IT manager</h3>
                     <h4>B.Comm (Agric) (Hons)</h4>
                 </div>
             </div>
