--- a/investor-info.html
+++ b/investor-info.html
@@ -124,7 +124,10 @@
                 <div id="info-1" class="info-items">
                     <button id="infoBtn-1" class="inline-btns">Reporting</button>
                     <h2 class="infoText-1">Quarterly Investor Reports</h2>
+                    <h3 class="infoText-1">2025</h3>
+                    <button class="info-btns-1" onclick="window.open('pdf/reporting/quarterly-investor-reports/2024/chf-investor-report-2025-03-31.pdf', '_blank');">CHF Investor Report 2025 03 31</button>
                     <h3 class="infoText-1">2024</h3>
+                    <button class="info-btns-1" onclick="window.open('pdf/reporting/quarterly-investor-reports/2024/chf-investor-report-2024-12-31.pdf', '_blank');">CHF Investor Report 2024 12 31</button>
                     <button class="info-btns-1" onclick="window.open('pdf/reporting/quarterly-investor-reports/2024/chf-investor-report-2024-09-30.pdf', '_blank');">CHF Investor Report 2024 09 30</button>
                     <button class="info-btns-1" onclick="window.open('pdf/reporting/quarterly-investor-reports/2024/chf-investor-report-2024-06-30.pdf', '_blank');">CHF Investor Report 2024 06 30</button>
                     <button class="info-btns-1" onclick="window.open('pdf/reporting/quarterly-investor-reports/2024/chf-investor-report-2024-03-31.pdf', '_blank');">CHF Investor Report 2024 03 31</button>
@@ -152,12 +155,13 @@
                     <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-reports/chf-gcr-surveillance-report-2024-04-26.pdf', '_blank');">CHF GCR Surveillance Report 2024 04 26</button>
                     <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-reports/chf-gcr-rating-report-2021-12-10.pdf', '_blank');">CHF GCR Rating Report 2021 12 10</button>
                     <h2 class="infoText-2">Latest Credit Rating Announcements</h2>
-                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2024-07-30.pdf', '_blank');">CHF GCR Rating Announcement 2021 12 10</button>
-                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2024-05-28.pdf', '_blank');">CHF GCR Rating Announcement 2022 11 09</button>
-                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2024-03-26.pdf', '_blank');">CHF GCR Rating Announcement 2023 04 12</button>
-                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2023-04-12.pdf', '_blank');">CHF GCR Rating Announcement 2024 03 26</button>
-                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2022-11-09.pdf', '_blank');">CHF GCR Rating Announcement 2024 05 28</button>
+                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2024-12-06.pdf', '_blank');">CHF GCR Rating Announcement 2024 12 06</button>
                     <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2021-12-10.pdf', '_blank');">CHF GCR Rating Announcement 2024 07 30</button>
+                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2022-11-09.pdf', '_blank');">CHF GCR Rating Announcement 2024 05 28</button>
+                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2023-04-12.pdf', '_blank');">CHF GCR Rating Announcement 2024 03 26</button>
+                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2024-03-26.pdf', '_blank');">CHF GCR Rating Announcement 2023 04 12</button>
+                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2024-05-28.pdf', '_blank');">CHF GCR Rating Announcement 2022 11 09</button>
+                    <button class="info-btns-2" onclick="window.open('pdf/credit-rating-reports/latest-credit-rating-announcements/chf-gcr-rating-announcement-2024-07-30.pdf', '_blank');">CHF GCR Rating Announcement 2021 12 10</button>
                 </div>
                 <div id="info-3" class="info-items">
                     <button id="infoBtn-3" class="inline-btns">Programme Memo & APS</button>
@@ -187,6 +191,8 @@
                 </div>
                 <div id="info-4" class="info-items">
                     <button id="infoBtn-4" class="inline-btns">Notices</button>
+                    <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2025-01-28-interest-payment-notice.pdf', '_blank');">CHF 2025 01 28 Interest Payment Notice</button>
+                    <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2025-01-28-interest-rate-notice.pdf', '_blank');">CHF 2025 01 28 Interest Rate Notice</button>
                     <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2024-10-28-interest-payment-notice.pdf', '_blank');">CHF 2024 10 28 Interest Payment Notice</button>
                     <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2024-10-28-interest-rate-notice.pdf', '_blank');">CHF 2024 10 28 Interest Rate Notice</button>
                     <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2024-07-29-principal-payment-and-tap-issue-notice.pdf', '_blank');">CHF 2024 07 29 Principal Payment and Tap Issue Notice</button>
@@ -202,8 +208,8 @@
                     <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2023-04-28-interest-payment-notice.pdf', '_blank');">CHF 2023 04 28 Interest Payment Notice</button>
                     <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2023-04-28-interest-rate-notice.pdf', '_blank');">CHF 2023 04 28 Interest Rate Notice</button>
                     <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2023-04-26-interest-rate-notice.pdf', '_blank');">CHF 2023 04 26 Interest Rate Notice</button>
-                    <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2023-01-30-interest-rate-notice.pdf', '_blank');">CHF 2023 01 30 Interest Rate Notice</button>
                     <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2023-01-30-interest-payment-notice.pdf', '_blank');">CHF 2023 01 30 Interest Payment Notice</button>
+                    <button class="info-btns-4" onclick="window.open('pdf/notices/chf-2023-01-30-interest-rate-notice.pdf', '_blank');">CHF 2023 01 30 Interest Rate Notice</button>
                 </div>
             </div>
         </div>
@@ -269,13 +275,16 @@ document.querySelectorAll('.inline-btns').forEach(button => {
         function info_1(event) {
             const elements = document.querySelectorAll('.infoText-1, .info-btns-1');
             if (event === 'extend') {
-                var values = [1200, 1220, 1300, 1380, 1680];
+                var values = [1210, 1330, 1410, 1500, 1790];
                 switch(true) {
                     case (screenwidth > 900 && screenwidth < 1050):
                         values = values.map(value => value - 60);
                         break;
-                    case (screenwidth < 900):
+                    case (screenwidth < 900 && screenwidth > 520):
                         values = values.map(value => value - 120);
+                        break;
+                    case (screenwidth < 520):
+                        values = values.map(value => value - 240);
                         break;
                     default:
                         break;
@@ -317,13 +326,13 @@ document.querySelectorAll('.inline-btns').forEach(button => {
         function info_2(event) {
             const elements = document.querySelectorAll('.infoText-2, .info-btns-2');
             if (event === 'extend') {
-                var values = [1080, 600, 700, 780];
+                var values = [1100, 600, 720, 800];
                 switch(true) {
                     case (screenwidth > 900 && screenwidth < 1050):
                         values = values.map(value => value - 60);
                         break;
                     case (screenwidth < 900):
-                        values = values.map(value => value - 80);
+                        values = values.map(value => value - 40);
                         break;
                     default:
                         break;
@@ -368,8 +377,11 @@ document.querySelectorAll('.inline-btns').forEach(button => {
                     case (screenwidth > 900 && screenwidth < 1050):
                         values = values.map(value => value - 60);
                         break;
-                    case (screenwidth < 900):
+                    case (screenwidth < 900 && screenwidth > 520):
                         values = values.map(value => value - 120);
+                        break;
+                    case (screenwidth < 520):
+                        values = values.map(value => value - 320);
                         break;
                     default:
                         break;
@@ -407,10 +419,10 @@ document.querySelectorAll('.inline-btns').forEach(button => {
         function info_4(event) {
             const elements = document.querySelectorAll('.infoText-4, .info-btns-4');
             if (event === 'extend') {
-                var values = [1320, 820];
+                var values = [1420, 920];
                 switch(true) {
                     case (screenwidth < 520):
-                        values = values.map(value => value - 250);
+                        values = values.map(value => value - 280);
                         break;
                     default:
                         break;
